Can delete transactions

--- a/templates/trade.html
+++ b/templates/trade.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <button type="submit" class="btn btn-success btn-lg btn-block" ng-disabled="{{ transaction.valid === false }}" ng-click="makeTransaction()">{{transaction.type}}</button>
+    <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="makeTransaction()" id="btn-submission">{{transaction.type}}</button>
   </form>
 </div>
 
